--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     .banner-left {
       flex: 1;
+      max-width: 600px;
       min-width: 0;
       text-align: left;
       font-size: 18px; /* Уменьшено с 20px */
@@ -64,8 +65,8 @@
 
     .banner-image {
       flex-shrink: 0;
-      width: 100px; /* Уменьшено с 124px */
-      height: 100px;
+      width: 180px; /* Уменьшено с 124px */
+      height: 180px;
       object-fit: contain;
       margin-right: 15px; /* Уменьшено с 20px */
     }
