--- a/index.html
+++ b/index.html
@@ -350,15 +350,15 @@
             <ul class="hackbonus-list">
               <li>
                 <span class="hackbonus-emoji">💸</span>
-                +5% from every service payment and balance top-up
+                <span class="hackbonus-point">10%</span> from every service payment and balance top-up
               </li>
               <li>
                 <span class="hackbonus-emoji">🎁</span>
-                <span class="hackbonus-point">+10 Hack Points</span> for all new users
+                <span class="hackbonus-point">+3 Hack Points</span> for all new users
               </li>
               <li>
                 <span class="hackbonus-emoji">🪙</span>
-                Pay up to <span class="hackbonus-point">10%</span> of your orders with bonuses
+                Pay up to <span class="hackbonus-point">25%</span> of your orders with bonuses
               </li>
             </ul>
           </div>
